samples/_failures_safe/1761495133_4de56f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cae6078b.c: In function ‘main’:
./samples/SAFE/__tmp_cae6078b.c:166:12: error: missing terminating " character
  166 |     printf("Compression ratio
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_cae6078b.c:166:5: error: expected expression at end of input
  166 |     printf("Compression ratio
      |     ^~~~~~
./samples/SAFE/__tmp_cae6078b.c:166:5: error: expected declaration or statement at end of input
